[package]
name = "day-1"
version = "0.1.0"
authors = ["Jonathan Bluett-Duncan <jonathan.bluett-duncan@argos.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"

[dev-dependencies]
assert_cmd = "1.0.2"
indoc = "1.0.3"
predicates = "1.0.5"
tempfile = "3.1.0"
