[package]
name = "day-2"
version = "0.1.0"
authors = ["Jonathan Bluett-Duncan <jbluettduncan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
itertools = "0.9.0"

[dev-dependencies]
assert_cmd = "1.0.2"
indoc = "1.0.3"
predicates = "1.0.5"
tempfile = "3.1.0"
