[package]
name = "day-5"
version = "0.1.0"
authors = ["Jonathan Bluett-Duncan <jbluettduncan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
clap = "2.33.3"
itertools = "0.10.0"
lazy_static = "1.4.0"
regex = "1.4.2"
thiserror = "1.0.22"

[dev-dependencies]
assert_cmd = "1.0.2"
indoc = "1.0.3"
predicates = "1.0.5"
proptest = "0.10.1"
tempfile = "3.1.0"
