[package]
name = "day-6"
version = "0.1.0"
authors = ["Jonathan Bluett-Duncan <jbluettduncan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
itertools = "0.10.0"
structopt = "0.3"

[dev-dependencies]
assert_cmd = "1.0.2"
indoc = "1.0.3"
predicates = "1.0.5"
tempfile = "3.1.0"
test-case = "1.0.0"
